--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore'
